--- a/frontend_2/src/index.html
+++ b/frontend_2/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Service Catalogue Dashboard</title>
-    <base href="/service-catalogue-manager" />
+    <base href="/data-model-mapper-gui" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico?" />
   </head>
