--- a/frontend_2/src/index.html
+++ b/frontend_2/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Service Catalogue Dashboard</title>
+    <title>Data model mapper</title>
     <base href="/data-model-mapper-gui" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico?" />
