--- a/frontend/src/assets/landing.html
+++ b/frontend/src/assets/landing.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #A5CA70 0%, #42a5f5 100%);
       color: #333;
       overflow-x: hidden;
     }
@@ -74,7 +74,7 @@
       left: 0;
       right: 0;
       height: 4px;
-      background: linear-gradient(90deg, #667eea, #764ba2);
+      background: linear-gradient(90deg,#2c3e50,  #3498db);
     }
 
     .section-title {
@@ -124,7 +124,7 @@
       width: 80px;
       height: 80px;
       border-radius: 50%;
-      background: linear-gradient(45deg, #667eea, #764ba2);
+      background: linear-gradient(45deg, #2c3e50,  #3498db);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -195,7 +195,7 @@
     .connection-line {
       position: absolute;
       height: 2px;
-      background: linear-gradient(90deg, #667eea, #764ba2);
+      background: linear-gradient(90deg, #2c3e50,  #3498db);
       opacity: 0.6;
       animation: flow 3s ease-in-out infinite;
     }
@@ -209,7 +209,7 @@
 
     .stat-card {
       padding: 30px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
       border-radius: 15px;
       text-align: center;
       color: white;
@@ -235,7 +235,7 @@
     }
 
     .interactive-demo {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
       color: white;
       padding: 60px 40px;
       border-radius: 20px;
@@ -258,7 +258,7 @@
 
     .demo-button:hover {
       background: white;
-      color: #667eea;
+      color: #42a5f5;
       transform: translateY(-3px);
       box-shadow: 0 10px 25px rgba(255, 255, 255, 0.3);
     }
@@ -292,7 +292,7 @@
       font-size: 1.4rem;
       font-weight: 600;
       margin-bottom: 15px;
-      color: #2c3e50;
+      color: #A5CA70;
     }
 
     .benefit-text {
@@ -303,7 +303,7 @@
     .cta-section {
       text-align: center;
       padding: 80px 40px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
       border-radius: 20px;
       margin: 60px 0;
       color: white;
@@ -323,7 +323,7 @@
 
     .cta-button {
       background: white;
-      color: #667eea;
+      color: #42a5f5;
       padding: 18px 40px;
       border-radius: 50px;
       font-size: 1.2rem;
@@ -388,7 +388,7 @@
     }
 
     .country.participating {
-      fill: #667eea;
+      fill: #42a5f5;
     }
 
     .country.participating:hover {
@@ -426,7 +426,7 @@
     }
 
     .legend-color.participating {
-      background: #667eea;
+      background: #42a5f5;
     }
 
     .legend-color.non-participating {
@@ -470,7 +470,7 @@
     }
 
     .hvd-card {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
       border-radius: 15px;
       padding: 30px;
       color: white;
@@ -595,7 +595,7 @@
     }
 
     .bucket-item[data-type="generic"] {
-      background: linear-gradient(45deg, #667eea, #764ba2);
+      background: linear-gradient(45deg, #2c3e50,  #3498db);
       color: #2c3e50;
     }
 
@@ -844,7 +844,7 @@
       width: 80px;
       height: 80px;
       border-radius: 50%;
-      background: linear-gradient(45deg, #667eea, #764ba2);
+      background: linear-gradient(45deg, #2c3e50,  #3498db);
       display: flex;
       align-items: center;
       justify-content: center;
