home and landing changes

--- a/frontend/src/assets/landing.html
+++ b/frontend/src/assets/landing.html
@@ -67,6 +67,17 @@
       overflow: hidden;
     }
 
+    .story-header {
+      background: linear-gradient(90deg, #2c3e50, #3498db);
+      /*position: relative;
+      margin: 80px 0;
+      height: fit-content;
+      padding: 60px 40px;
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      overflow: hidden;*/
+    }
+
     .story-section::before {
       content: '';
       position: absolute;
@@ -74,7 +85,7 @@
       left: 0;
       right: 0;
       height: 4px;
-      background: linear-gradient(90deg,#2c3e50,  #3498db);
+      background: linear-gradient(90deg, #2c3e50, #3498db);
     }
 
     .section-title {
@@ -124,7 +135,7 @@
       width: 80px;
       height: 80px;
       border-radius: 50%;
-      background: linear-gradient(45deg, #2c3e50,  #3498db);
+      background: linear-gradient(45deg, #2c3e50, #3498db);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -195,7 +206,7 @@
     .connection-line {
       position: absolute;
       height: 2px;
-      background: linear-gradient(90deg, #2c3e50,  #3498db);
+      background: linear-gradient(90deg, #2c3e50, #3498db);
       opacity: 0.6;
       animation: flow 3s ease-in-out infinite;
     }
@@ -209,7 +220,7 @@
 
     .stat-card {
       padding: 30px;
-      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
+      background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
       border-radius: 15px;
       text-align: center;
       color: white;
@@ -235,7 +246,7 @@
     }
 
     .interactive-demo {
-      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
+      background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
       color: white;
       padding: 60px 40px;
       border-radius: 20px;
@@ -303,7 +314,7 @@
     .cta-section {
       text-align: center;
       padding: 80px 40px;
-      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
+      background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
       border-radius: 20px;
       margin: 60px 0;
       color: white;
@@ -470,7 +481,7 @@
     }
 
     .hvd-card {
-      background: linear-gradient(135deg, #2c3e50 0%,  #3498db 100%);
+      background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
       border-radius: 15px;
       padding: 30px;
       color: white;
@@ -595,7 +606,7 @@
     }
 
     .bucket-item[data-type="generic"] {
-      background: linear-gradient(45deg, #2c3e50,  #3498db);
+      background: linear-gradient(45deg, #2c3e50, #3498db);
       color: #2c3e50;
     }
 
@@ -844,7 +855,7 @@
       width: 80px;
       height: 80px;
       border-radius: 50%;
-      background: linear-gradient(45deg, #2c3e50,  #3498db);
+      background: linear-gradient(45deg, #2c3e50, #3498db);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -948,6 +959,7 @@
       <div class="story-meta">
         Pubblicato il 24 Luglio 2025<br>
       </div>
+      <img src="/assets/images/app/dmm-logo.png" alt="Data model mapper logo" style="zoom:85%;">
     </div>
 
     <!-- Introduzione -->
